--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -85,7 +85,7 @@ body {
 					color: white;
 					background-color: #333;
 					transition: all 0.25s;
-					padding: 15px 35px;
+					padding: 15px 26px;
 					&:hover {
 						background: white;
 						color: black;
@@ -96,7 +96,7 @@ body {
 				color: white;
 				background-color: transparent;
 				transition: all 0.25s;
-				padding: 15px 35px;
+				padding: 15px 26px;
 				&:hover {
 					background: white;
 					color: black;
@@ -243,7 +243,7 @@ body {
 	}
 }
 
-#webshops_page, #e_marketing_page, #g_infrastructure_page, #hardware_page {
+#webshops_page, #omni_page, #webshopsb2b_page, #e_marketing_page, #g_infrastructure_page, #hardware_page {
 	.container {
 		p img {
 			@media (min-width: 1px) and (max-width: @screen-xs-max) { // max 767px
